static/css/home.css
/* 
*** Font Information ***
Dosis font has 800 (thick) weight and 400 (regular) weight

*** Color Information***
Defining color values to make it easier to change later on 
*/
:root {
    --DMain: #2B061E;
    --LMain: #85B79D;
    --Light: #FFEED6;
    --Dark: #12020D;
    --DAccent: #D2BF55;
    --LAccent: #FBBFCA;

}
* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
  }

html, body {
    margin: 0;
    scroll-behavior: smooth;
}

@keyframes pulse {
    100% {
        text-shadow:
        /* White glow */
        0 0 7px var(--Light),
        0 0 11px var(--Light),
        0 0 21px var(--Light),
        /* Green glow */
        0 0 42px var(--LAccent),
        0 0 82px var(--LAccent),
        0 0 92px var(--LAccent),
        0 0 102px var(--LAccent),
        0 0 151px var(--LAccent);
    }
    0% {
        text-shadow:
        /* White glow */
        0 0 6px var(--Light),
        0 0 10px var(--Light),
        0 0 17px var(--Light),
        /* Green glow */
        0 0 36px var(--LAccent),
        0 0 73px var(--LAccent),
        0 0 80px var(--LAccent),
        0 0 93px var(--LAccent),
        0 0 140px var(--LAccent);
    }
}

/* Neon sign ideas from https://css-tricks.com/how-to-create-neon-text-with-css/ */
#home_title {
    text-align: center;
    color: var(--Light);
    animation: pulse 0.6s ease-in-out infinite alternate;    
}

.arrow {
    text-align: center;
    color: var(--Light);
    animation: pulse 0.6s ease-in-out infinite alternate;    
    margin: 6vh;
    cursor: pointer;
}

.cloud {
    animation: pulse 0.6s ease-in-out infinite alternate,
    MoveUpDown 2s linear infinite;
}

@keyframes MoveUpDown {
    0%, 100% {
        transform: translateY(0);
    }
    50% {
        transform: translateY(-10px);
    }
}

h1, h2, h3, h4, body {
    font-family: 'Alegreya Sans', sans-serif;
    font-weight: 300;
}

.large-title {
    font-size: 10vh;
    margin:20px
}

@media screen and (prefers-reduced-motion) {
    h1 {
        animation: none;
    }
    
}

nav {
    display: flex;
    justify-content: space-between;
    padding: 20px;
    color: var(--Light);
    background-color: var(--DMain);

    /* Stick to top */
    top: 0;
    position: sticky;
}

button {
    background: none;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
}
.read-more-button {
    color: var(--LAccent)
}

.nav_button {
    color: inherit;
    flex: 1;
}

/* Body Beginning and End Styles */
.beginning {
    background-color: var(--DMain);
    display: flex;
    flex-direction: column;
}

div {
    margin: 0;
}

h2 {
    font-size: 10vh;
    margin:40px;
}

.container {
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
    min-height: 100vh;
    padding: 50px;
}

/* ABOUT SECTION */

#about {
    color: var(--Light);
}

#about-text, #about-image {
    width: 47.3%;
    display: inline-block;
}

#about-image {
    padding-left: 60px;
}

img {
    margin-top: 20px;
    height: auto;
    width: 100%;
}

.project-img-icon {
    width:100px;
    height: 100px;
    object-fit: cover;
}

#headshot {
    height:350px;
    width:350px;
    object-fit: cover;
    object-position: 0 15%;
    border-radius: 50%;
}

.center-align {
    text-align: center;
}

/* PROJECTS & EXPERIENCE SECTION */
#projects {
    background: var(--LAccent);
}

#projects-container {
    overflow-y: scroll;
    height: 75vh;
    border: solid var(--Dark) 2px;
    padding-left: 20px;
    padding-right: 20px;
    scrollbar-color: var(--Dark) var(--Light);
    background-color: var(--DMain);
}

.project-card {
    background: var(--DAccent);
    padding: 20px;
    margin-top: 20px;
    margin-bottom: 10px;
}

h3 {
    font-size: 5vh;
    margin:20px;
    text-align: center;
}

p, a {
    font-size: 25px;
}

.skill-div {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
}

h4 {
    text-align: center;
    font-size: 25px;
    margin:5px;
}

/* RESUME SECTION */
#resume {
    background: var(--LMain);
    align-items: center;
}

#most-recent-resume {
    height: 65vh;
    width: 80vw;
}

#resume-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

#resume-date {
    text-align: center;
}

/* CONTACT SECTION */
#contact {
    background: none;
    color: var(--Light);
}

#contact-methods {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: baseline;
    text-align: center;
}

#contact-button {
    color: var(--LAccent);
}

